mobile/smartphone.css
body {
  background: #000;
  color: #fff;
}

#updatestatus {
  background: #262c32;
  width: 100%;
  color: #d4d5d6;
  border: 0;
  padding: 0;
}

#updatestatus .map {
  margin-left: 4px;
}

#innerstatus {
  padding: 4px;
  float: right;
  width: 50%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

#loadlevel {
  border-width: 0;
  background: transparent;
  color: #FFF;
}

#mobileinfo {
  float: left;
  width: 50%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  position:relative;
  padding: 4px 0;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

#mobileinfo .portallevel {
  padding: 0 0.25em;
  color: #FFF;
}

#mobileinfo .resonator {
  position: absolute;
  width: 12%; /* a little less that 1/8 to have a small distance */
  height: 100%;
  top: 0;
  border-top: 3px solid red;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

#mobileinfo .filllevel {
  position: absolute;
  bottom: 0;
  height: 3px;
}

#mobileinfo .enl .filllevel {
  background-color: #03fe03 !important;
}

#mobileinfo .res .filllevel {
  background-color: #00c5ff !important;
}

#name #signout { /* no hover, always show signout button */
  display: block;
}

#sidebar, #chatcontrols, #chat, #chatinput {
  background: #0B3351 !important;
}

.leaflet-top .leaflet-control {
  margin-top: 5px !important;
  margin-left: 5px !important;
}

.leaflet-control-layers {
  display: none;    /* hide layer control - it's now handled by an in-app option */
}

#geosearch {
  width: 100%;
}

#geosearchwrapper img {
  display: none;
}

#chatcontrols {
  height: 38px;
  width: 100%;
  display: none !important;
}

/* hide shrink button */
#chatcontrols a:first-child {
  display: none;
}

#chatcontrols a {
  width: 50px;
  height:36px;
  overflow: hidden;
  vertical-align: middle;
  line-height: 36px;
  text-decoration: none;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

#chat {
  left:0;
  right:0;
  top: 1px !important;
  bottom:30px;
  width: auto;
}

#chatinput {
  width: 100%;
  height: 30px;
}

#chat td:nth-child(2), #chatinput td:nth-child(2) {
  width: 77px;
}

#chatcontrols a.active {
  border-color: #FFCE00;
  border-bottom-width:0px;
  font-weight:bold
}

#chatcontrols a.active + a {
  border-left-color: #FFCE00
}

#sidebartoggle {
  display: none !important;
}

#scrollwrapper {
  bottom: 0;
  max-height: none !important;
  width: 100% !important;
  right: 0;
  left:0;
}

#sidebar {
  width: 100% !important;
  min-height: 100%;
  border:0;
}

#sidebar > * {
  width: 100%;
}

#playerstat {
  margin-top: 5px;
}

#portaldetails {
  min-height: 0;
}

.fullimg {
  width: 100%;
}


#portal_highlight_select{
  top:0px !important;
  left:0px !important;
}

